# GameNetworkFramework

./: CMakeLists.txt  GameProject.sln  TestMain.cpp  TestServer.cpp  TestUtils.cpp
Buffer/: Buffer.cpp  Buffer.h  Buffer.vcxproj  Buffer.vcxproj.filters  ByteOrder.h
GameClient/: GameClient.cpp  GameClient.h  GameClient.vcxproj  GameController.cpp  GameController.h
GameServer/: AsioServer.h  BaseMessage.cpp  BaseMessage.h  Buffer.cpp  Buffer.h  Common.h  ControlMessage.h  GameConnection.cpp  GameConnection.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  GameServerExample.cpp  GameServerExample.h  MKServer.cpp  MKServer.h  Message.cpp  MessageUtils.h  Messages.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgThread.cpp  MsgThread.h  NetworkCommon.h  PlayerInitMessage.h  TcpConnection.cpp  TcpConnection.h  ThreadSafeQueue.h  TimeUtils.h  main.cpp
GameServerTest/: GameServerTest.vcxproj  GameServerTest.vcxproj.filters  test.cpp
Message/: BaseMessage.cpp  BaseMessage.h  ControlMessage.h  EnterRoomMessage.h  GameStartMessage.h  Message.vcxproj  Message.vcxproj.filters  MessageUtils.h  Messages.cpp  Messages.h  PingMessage.h
Network/: GameConnection.cpp  GameConnection.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgThread.h  NetworkCommon.h  TcpConnection.cpp  TcpConnection.h
Utils/: FormatUtils.h  Logger.cpp  Logger.h  ThreadSafeQueue.h  TimeUtils.cpp  TimeUtils.h
